--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
 .DS_Store
 node_modules/
 /dist/
+
+# local env files
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
+
+# Firebase cache
+.firebase/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # Editor directories and files
 .idea
