--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"chalk": "^2.0.1",
 		"copy-webpack-plugin": "^4.0.1",
 		"css-loader": "^0.28.0",
+		"dotenv": "^8.2.0",
 		"eslint": "^4.15.0",
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
